// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"filename" option matches snapshot for \`[name][ext].super-compressed.gz[query]\` value ({String}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.super-compressed.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.super-compressed.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.super-compressed.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.super-compressed.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "async.async.js?ver=e2c5a370fd2d5b65b50b",
    194,
    Object {
      "fullhash": "e2c5a370fd2d5b65b50b",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.super-compressed.js.gz?ver=e2c5a370fd2d5b65b50b",
      },
      "size": 194,
    },
  ],
  Array [
    "async.async.super-compressed.js.gz?ver=e2c5a370fd2d5b65b50b",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "main.js?var=e2c5a370fd2d5b65b50b",
    16102,
    Object {
      "fullhash": "e2c5a370fd2d5b65b50b",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.super-compressed.js.gz?var=e2c5a370fd2d5b65b50b",
      },
      "size": 16102,
    },
  ],
  Array [
    "main.super-compressed.js.gz?var=e2c5a370fd2d5b65b50b",
    3996,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3996,
    },
  ],
]
`;

exports[`"filename" option matches snapshot for \`[name][ext].super-compressed.gz[query]\` value ({String}): errors 1`] = `Array []`;

exports[`"filename" option matches snapshot for \`[name][ext].super-compressed.gz[query]\` value ({String}): warnings 1`] = `Array []`;

exports[`"filename" option matches snapshot for \`[path][base].super-compressed.gz[query][fragment]\` value ({String}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.super-compressed.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.super-compressed.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.super-compressed.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.super-compressed.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "assets/js/async.async.js.super-compressed.gz?ver=e6b8d16ef1ee4a491ddf#hash",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "assets/js/async.async.js?ver=e6b8d16ef1ee4a491ddf#hash",
    194,
    Object {
      "fullhash": "e6b8d16ef1ee4a491ddf",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "assets/js/async.async.js.super-compressed.gz?ver=e6b8d16ef1ee4a491ddf#hash",
      },
      "size": 194,
    },
  ],
  Array [
    "assets/js/main.js.super-compressed.gz?var=e6b8d16ef1ee4a491ddf#hash",
    4013,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 4013,
    },
  ],
  Array [
    "assets/js/main.js?var=e6b8d16ef1ee4a491ddf#hash",
    16128,
    Object {
      "fullhash": "e6b8d16ef1ee4a491ddf",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "assets/js/main.js.super-compressed.gz?var=e6b8d16ef1ee4a491ddf#hash",
      },
      "size": 16128,
    },
  ],
]
`;

exports[`"filename" option matches snapshot for \`[path][base].super-compressed.gz[query][fragment]\` value ({String}): errors 1`] = `Array []`;

exports[`"filename" option matches snapshot for \`[path][base].super-compressed.gz[query][fragment]\` value ({String}): warnings 1`] = `Array []`;

exports[`"filename" option matches snapshot for custom function ({Function}) and custom algorithm ({Function}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "compression-function-b8ad1ba770111161fc52644f2d5cfb0f": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    78117,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "compression-function-b8ad1ba770111161fc52644f2d5cfb0f": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    672,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  Array [
    "async.async.js.gz?ver=75175682acbd779e66f5",
    194,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 194,
    },
  ],
  Array [
    "async.async.js?ver=75175682acbd779e66f5#hash",
    194,
    Object {
      "fullhash": "75175682acbd779e66f5",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "compression-function-b8ad1ba770111161fc52644f2d5cfb0f": "async.async.js.gz?ver=75175682acbd779e66f5",
      },
      "size": 194,
    },
  ],
  Array [
    "main.js.gz?var=75175682acbd779e66f5",
    16107,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 16107,
    },
  ],
  Array [
    "main.js?var=75175682acbd779e66f5#hash",
    16107,
    Object {
      "fullhash": "75175682acbd779e66f5",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "compression-function-b8ad1ba770111161fc52644f2d5cfb0f": "main.js.gz?var=75175682acbd779e66f5",
      },
      "size": 16107,
    },
  ],
]
`;

exports[`"filename" option matches snapshot for custom function ({Function}) and custom algorithm ({Function}): errors 1`] = `Array []`;

exports[`"filename" option matches snapshot for custom function ({Function}) and custom algorithm ({Function}): warnings 1`] = `Array []`;

exports[`"filename" option matches snapshot for custom function ({Function}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.js.gz?ver=75175682acbd779e66f5",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "async.async.js?ver=75175682acbd779e66f5#hash",
    194,
    Object {
      "fullhash": "75175682acbd779e66f5",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.js.gz?ver=75175682acbd779e66f5",
      },
      "size": 194,
    },
  ],
  Array [
    "main.js.gz?var=75175682acbd779e66f5",
    4002,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 4002,
    },
  ],
  Array [
    "main.js?var=75175682acbd779e66f5#hash",
    16107,
    Object {
      "fullhash": "75175682acbd779e66f5",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz?var=75175682acbd779e66f5",
      },
      "size": 16107,
    },
  ],
]
`;

exports[`"filename" option matches snapshot for custom function ({Function}): errors 1`] = `Array []`;

exports[`"filename" option matches snapshot for custom function ({Function}): warnings 1`] = `Array []`;

exports[`"filename" option show work: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "assets/scripts/async.async.js.gz",
    134,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 134,
    },
  ],
  Array [
    "assets/scripts/async.async.js?ver=48c1d023383ca83151f8#hash",
    194,
    Object {
      "fullhash": "48c1d023383ca83151f8",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "assets/scripts/async.async.js.gz",
      },
      "size": 194,
    },
  ],
  Array [
    "assets/scripts/main.js.gz",
    4016,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 4016,
    },
  ],
  Array [
    "assets/scripts/main.js?var=48c1d023383ca83151f8#hash",
    16133,
    Object {
      "fullhash": "48c1d023383ca83151f8",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "assets/scripts/main.js.gz",
      },
      "size": 16133,
    },
  ],
]
`;

exports[`"filename" option show work: errors 1`] = `Array []`;

exports[`"filename" option show work: warnings 1`] = `Array []`;
